--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       </div>
       <div class="card-footer">
         <button id="generate" class="btn">Generate Password</button>
+
+        <button class="btn id=" copy">Copy to Clipboard</button>
       </div>
     </div>
   </div>
