--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="card-footer">
         <button id="generate" class="btn">Generate Password</button>
 
-        <button class="btn id=" copy">Copy to Clipboard</button>
+        <button class="btn" id="copyButton" copy">Copy to Clipboard</button>
       </div>
     </div>
   </div>
