--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Password Generator</title>
+  <title>Random Password Generator</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <div class="wrapper">
     <header>
-      <h1>Password Generator</h1>
+      <h1>Random Password Generator</h1>
     </header>
     <div class="card">
       <div class="card-header">
-        <h2>Generate a Password</h2>
+        <h2>Generate a Random Password</h2>
       </div>
       <div class="card-body">
         <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
